# xsq

./: README.md  pyproject.toml  run-ui.bat  run-ui.ps1  start_visual_ui.bat  一键启动可视化.bat
.github/workflows/: build-macos.yml
doc_auto/: feishu_message_archive.md
feishu_archive_out/: analysis.md  digest.md  messages.jsonl
feishu_archive_out/2026-05-12T08_00_00_08_00_2026-05-12T22_00_00_08_00__export_20260512-110840/: analysis.md  digest.md  messages.jsonl
feishu_archive_out/2026-05-12T08_00_00_08_00_2026-05-12T22_00_00_08_00__export_20260512-135957/: analysis.md  digest.md  messages.jsonl
feishu_archive_out/2026-05-12T08_00_00_08_00_2026-05-12T22_00_00_08_00__export_20260512-161208/: analysis.md  digest.md  messages.jsonl
feishu_archive_out/2026-05-12__export_20260512-162146/: analysis.md  digest.md  messages.jsonl
feishu_archive_out/2026-05-13__export_20260515-102720/: analysis.md  digest.md  messages.jsonl
feishu_archive_out/2026-05-14__export_20260515-101153/: analysis.md  digest.md  messages.jsonl
feishu_archive_out/2026-05-15__export_20260515-110405/: analysis.md  digest.md  messages.jsonl
feishu_archive_out/2026-05-15__export_20260515-110841/: analysis.md  digest.md  messages.jsonl
feishu_archive_out/2026-05-15__export_20260515-113051/: analysis.md  digest.md  (+1 more)
tests/: test_analysis_bundle.py  test_analysis_prompt.py  test_analysis_run_errors.py  test_analysis_run_prompt_override.py  test_filter_chats.py  test_lark_cli.py  test_lark_cli_errors.py  test_lark_doc_export.py  test_llm_client.py  test_normalize.py  test_pipeline.py  test_ui_prefs.py
(+36 files in other folders)
